fixed overflow issue and added email and phone features

--- a/styles/components/_bg-face.scss
+++ b/styles/components/_bg-face.scss
@@ -10,7 +10,7 @@
         rgba(255, 255, 255, 0.8) 0, 
         rgba(255, 255, 255, 1) 65%), 
         url(/imgs/davekeithpic.jpg);
-    background-position: center top;
+    background-position: center -5rem;
     background-repeat: repeat-y;
     background-size: 100vw 100vw;
     filter: grayscale(1);
