--- a/styles/modules/footer.module.scss
+++ b/styles/modules/footer.module.scss
@@ -32,23 +32,23 @@
             border-radius: 3rem;
             transition: transform 0.5s cubic-bezier(1, 2.5, 0.4, 1.8);
         }
-        // .my-email{
-        //     bottom: -5rem;
+        .my-email{
+            bottom: 15rem;
 
-        //     @include respond(tab-port){
-        //         bottom: 0;
-        //     }
-        // }
-        // .my-phone-number{
-        //     bottom: -10rem;
+            @include respond(tab-port){
+                bottom: 10;
+            }
+        }
+        .my-phone-number{
+            bottom: 20rem;
 
-        //     @include respond(tab-port){
-        //         bottom: -5rem;
-        //     }
+            @include respond(tab-port){
+                bottom: 15rem;
+            }
 
-        //     @include respond(phone){
-        //         bottom: 0;
-        //     }
-        // }
+            @include respond(phone){
+                bottom: 0;
+            }
+        }
     }
 }
