--- a/styles/modules/main-navigation.module.scss
+++ b/styles/modules/main-navigation.module.scss
@@ -74,6 +74,10 @@
         line-height: 3;
         width: 100%;
         height: 100%;
+
+        @include respond(phone){
+            font-size: 2.5rem;
+        }
     }
 
     li{
@@ -94,7 +98,7 @@
         top: -100vh;
         left: -100vw;
         border-radius: 100%;
-        //transition: all .5s linear;
+        transition: all .5s linear;
     }
 }
 
